# camazotz

./: .gitignore  .trufflehog.yaml  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  pyproject.toml
.github/: SECURITY.md
brain_gateway/: __init__.py
camazotz_modules/: __init__.py  base.py
compose/: .env.example  .env.okta.example  Dockerfile  docker-compose.nullfield.yml  docker-compose.okta.yml  docker-compose.runner.yml  docker-compose.yml
contracts/: event_schema.json  mcp_profile.md  module_contract.json
deploy/: README.md  generate-compose.py
docs/: ecosystem.md  feedback-loop.md  mcp-at-scale-golden-path.md  module-authoring.md  scenarios.md  testing.md
frontend/: Dockerfile  app.py  lane_taxonomy.py  threat_map.py
kube/: README.md  brain-gateway-policed.yaml  brain-gateway.yaml  configmap.yaml  deploy.sh  namespace.yaml  observer.yaml  ollama.yaml  portal.yaml  secret.yaml  zitadel-postgres.yaml  zitadel.yaml
scripts/: feedback_loop.py  qa_harness.py  smoke_test.py  zitadel_bootstrap.py
tests/: conftest.py  e2e_matrix.py  helpers.py  test_agent_chain_direct_api_lab.py  test_agent_http_bypass_lab.py  test_agent_llm_chain_lab.py  test_agent_sdk_chain_lab.py  test_agent_subprocess_chain_lab.py  test_ai_governance_bypass_lab.py  test_anon_rate_exhaust_lab.py  test_anon_schema_harvest_lab.py  test_attribution_lab.py  test_audit_lab.py  test_auth0_flows.py  test_auth_lab.py  test_bedrock_claude_live_path.py  test_bench.py  test_blocklist_bypass_lab.py  test_bot_identity_theft_lab.py  test_brain_provider_selection.py  test_budget_tuning_lab.py  test_canary_flags.py  test_cert_replay_lab.py  test_challenge_dashboard.py  test_cloud_claude_live_path.py  (+68 more)
(+278 files in other folders)
