[project]
name = "camazotz"
version = "0.1.0"
description = "MCP security playground for vulnerable module labs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "flask>=3.1.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "frontend"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=brain_gateway",
    "--cov=camazotz_modules",
    "--cov=frontend",
    "--cov=compose/observer",
    "--cov=tests",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=100",
]

[tool.coverage.run]
omit = ["tests/e2e_matrix.py"]
